--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "swiper": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
